--- a/style.sass
+++ b/style.sass
@@ -1,6 +1,13 @@
+html
+  background-color: #000
+
 body
   height: 100%
   width: 100%
+  color: #FFF
+
+h1
+  color: #FFF
 
 header, footer, .center
   text-align: center
@@ -80,3 +87,37 @@ input[type="button"].button-danger:focus
   color: #FFF
   background-color: #C43E3A
   border-color: #C43E3A
+  
+  
+  
+.button.button-primary, button.button-primary, input[type="submit"].button-primary, input[type="reset"].button-primary, input[type="button"].button-primary
+    background-color: #24C500
+    border-color: #24C500
+    
+.ui-grid-top-panel
+	background-color: #0024d8
+	
+.ui-grid-header 
+    border-bottom: 1px solid #0024d8
+    box-sizing: border-box
+
+.ui-grid-row:nth-child(odd) .ui-grid-cell 
+    background-color: #7f91eb
+
+.ui-grid-row.ui-grid-row-selected>[ui-grid-row]>.ui-grid-cell 
+    background-color: #324fdf
+
+input, textarea, select, fieldset 
+    color: #000
+
+select 
+	  color: #FFF !important
+    background-color: #a42bf9
+    border: 1px solid #D1D1D1
+    border-radius: 4px
+
+
+.button, button, input[type="submit"], input[type="reset"], input[type="button"] 
+    background-color: #7777777
+    border-radius: 4px
+    border: 1px solid #7777777
