--- a/style.sass
+++ b/style.sass
@@ -1,6 +1,6 @@
 html
   background-color: #000
-
+  
 body
   height: 100%
   width: 100%
@@ -20,7 +20,7 @@ th, td
 
 h2, h3, h4, h5, h6, ul, li
   margin-bottom: 0
-  
+
 footer
   margin-top: 10px
 
@@ -32,21 +32,21 @@ footer
   margin-bottom: 20px 
   width: 100%
   height: 200px
-  
+
 .version
   color: #ccc
   font-size: 0.3em
-  
+
 .views
   margin-top: -20px
   margin-bottom: 10px
-  
+
 .download-button
   margin-left: 10px
-  
+
 .no-margin
   margin: 0px
-  
+
 .spinner
   position: absolute
   top: 30%
@@ -58,14 +58,14 @@ footer
   border-radius: 25px
   opacity: .8
   text-align: center
-  
+
 .spinner-icon
   position: relative
   top: 50%
   margin-top: -100px
   font-size: 200px
   transform: translateY(-50%)
-  
+
 .button.button-danger,
 button.button-danger,
 input[type="submit"].button-danger,
@@ -87,16 +87,18 @@ input[type="button"].button-danger:focus
   color: #FFF
   background-color: #C43E3A
   border-color: #C43E3A
-  
-  
-  
-.button.button-primary, button.button-primary, input[type="submit"].button-primary, input[type="reset"].button-primary, input[type="button"].button-primary
+
+.button.button-primary, 
+button.button-primary, 
+input[type="submit"].button-primary, 
+input[type="reset"].button-primary, 
+input[type="button"].button-primary
     background-color: #24C500
     border-color: #24C500
-    
+
 .ui-grid-top-panel
 	background-color: #0024d8
-	
+
 .ui-grid-header 
     border-bottom: 1px solid #0024d8
     box-sizing: border-box
@@ -111,13 +113,16 @@ input, textarea, select, fieldset
     color: #000
 
 select 
-	  color: #FFF !important
+	color: #FFF !important
     background-color: #a42bf9
     border: 1px solid #D1D1D1
     border-radius: 4px
 
-
-.button, button, input[type="submit"], input[type="reset"], input[type="button"] 
+.button, 
+button, 
+input[type="submit"], 
+input[type="reset"], 
+input[type="button"] 
     background-color: #7777777
     border-radius: 4px
     border: 1px solid #7777777
