--- a/style.sass
+++ b/style.sass
@@ -123,6 +123,6 @@ button,
 input[type="submit"], 
 input[type="reset"], 
 input[type="button"] 
-    background-color: #7777777
+    background-color: #777777
     border-radius: 4px
-    border: 1px solid #7777777
+    border: 1px solid #777777
