--- a/200.jade
+++ b/200.jade
@@ -3,10 +3,10 @@ html(ng-app="BTorrent" lang="en")
     head
         base(href="")
         meta(charset="UTF-8")
-        title βTorrent: Browser WebTorrent Client
-        meta(name="description" content="βTorrent is the first fully-featured Browser WebTorrent Client")
-        meta(name="keywords" content="βTorrent, btorrent, client, webtorrent, browser, torrent, stream, bittorrent, torrenting, sharing, filesharing")
-        meta(name="author" content="Diego Rodríguez Baquero - DiegoRBaquero")
+        title ΞΔΞ Share Files over PTP ΞΔΞ
+        meta(name="description" content="ΞΔΞ Share Files over PTP ΞΔΞ")
+        meta(name="keywords" content="βTorrent, btorrent, client, webtorrent, browser, torrent, stream, bittorrent, torrenting, sharing, filesharing, ΞΔΞ, share")
+        meta(name="author" content="Sollidius - OnlineLabs")
         meta(name="viewport" content="width=device-width, initial-scale=1")
         script(src="https://cdn.jsdelivr.net/g/webtorrent@0.90,momentjs@2,angularjs@1.4(angular.min.js+angular-route.min.js+angular-sanitize.min.js),angular.ui-grid@3.1,angular.ng-notify@0.7,angular.file-upload@12")
         link(rel="stylesheet" href="https://cdn.jsdelivr.net/g/normalize@3.0,skeleton@2.0,angular.ng-notify@0.7(ng-notify.min.css)")
@@ -16,7 +16,7 @@ html(ng-app="BTorrent" lang="en")
     body(ng-controller="BTorrentCtrl" ng-cloak="")
         header
             h1
-                | βTorrent
+                | ΞΔΞ
                 span.version  v{{$root.version}}
             div.views(ng-show="$root.client.torrents.length == 0")
                 a(ng-href="/#") Full
@@ -27,22 +27,9 @@ html(ng-app="BTorrent" lang="en")
         #viewer(ng-style="$root.viewerStyle")
         #view(ng-view)
         footer
-            a.button(href="https://github.com/DiegoRBaquero/BTorrent/issues" target="_blank")
-                i.fa.fa-github
-                |  Suggest a feature / Report a bug 
-                i.fa.fa-comment
-            br
-            b βTorrent is an Open-Source project by 
-                a(href="https://diegorbaquero.com" target="_blank") DiegoRBaquero
-            br
-            b 
-                a(href="https://tracker.btorrent.xyz/stats" target="_blank") βTorrent's Tracker Stats
-            br
-            | Powered by 
-            a(href="https://github.com/feross/webtorrent" target="_blank") WebTorrent
-            br
-            small Hosted by 
-                a(href="https://m.do.co/c/0b25a910e6e4" target="_blank") Digital Ocean
+            a(href="https://tracker.ΞΔΞ.eu/stats" target="_blank") ΞΔΞ's Tracker Stats
+            b ΞΔΞ if a fork of 
+-                a(href="https://diegorbaquero.com" target="_blank") βTorrent
         .spinner(ng-show="client.processing")
             i.fa.fa-spinner.fa-spin.spinner-icon
         script(src="app.js")
