--- a/200.jade
+++ b/200.jade
@@ -29,7 +29,7 @@ html(ng-app="BTorrent" lang="en")
         footer
             a(href="https://tracker.ΞΔΞ.eu/stats" target="_blank") ΞΔΞ's Tracker Stats
             b ΞΔΞ if a fork of 
--                a(href="https://diegorbaquero.com" target="_blank") βTorrent
+                a(href="https://diegorbaquero.com" target="_blank") βTorrent
         .spinner(ng-show="client.processing")
             i.fa.fa-spinner.fa-spin.spinner-icon
         script(src="app.js")
